# flutter_windows11_snap_layouts_examples

./: README.md  pubspec.yaml
lib/: main.dart
lib/src/: app.dart
lib/src/platform/windows/: windows_interface.dart
lib/src/widgets/window/: window_caption.dart  window_caption_button.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp
windows/runner/windows_interface/: CMakeLists.txt  windows_interface.cpp  windows_interface.h
